--- a/css/style.css
+++ b/css/style.css
@@ -64,171 +64,24 @@ p {
   color: rgb(0, 0, 0);
 }
 
-.flex-container {
 
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-
-}
-
-.block {
-  margin-top: 50px;
-  padding: 2.5%;
-
-}
-
-.block img {
-  width: 100%;
-}
-
-.block-2 img {
-  max-width: 2000px;
-}
-
-.block-4 img {
-  max-width: 1000px;
-}
-
-.block-content {
-  height: 100%;
-  height: 100%;
-  align-items: stretch;
-}
-
-footer {
+.question-card, .contact-form{
+  max-width: 800px;
   margin: 0 auto;
-  background-color: #1d1c1c;
-  color: whitesmoke;
-
+  padding: 50px;
 }
 
-footer p {
-  color: whitesmoke;
+.form-check{
+  text-align: left;
 }
 
-footer a {
-  color: lightblue;
-  text-decoration: none;
+#text-input, #dropdown-input{
+  margin: 10px 0 10px 0;
 }
 
-footer #about {
-  max-width: 40%;
+select{
+  text-align: left
 }
-
-
-.service-group {
-  display: flex;
-}
-
-.service-group a {
-  text-decoration: none;
-}
-
-.service-group img:hover {
-  zoom: 3;
-  filter: alpha(opacity=50);
-  filter: contrast(1.3)
-}
-
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0 4px;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
-
-.column-2 {
-  flex: 45%;
-  max-width: 50%;
-  padding: 0 10px 5% 10px;
-}
-/* Create three equal columns that sits next to each other */
-.column {
-  flex: 30%;
-  max-width: 31%;
-  padding: 0 10px 5% 10px;
-
-}
-
-#wrap-inverse{
-  flex-direction: row-reverse;
-}
-.column img {
-  padding: 10px 10px 10px 10px;
-  vertical-align: middle;
-  width: 100%;
-}
-
-
-.mapouter {
-
-  text-align: right;
-  height: 1000px;
-  width: 100%;
-  margin: 20px;
-}
-
-.gmap_canvas {
-  overflow: hidden;
-  background: none !important;
-  height: 100%;
-  width: 100%;
-  
-}
-
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media (max-width: 800px) {
-  .column {
-    flex: 100%;
-    max-width: 100%;
-  }
-  .row {
-    flex-wrap: wrap-reverse;
-  }
-}
-
-iframe{
-  margin: 40px 0px 40px 0px;
-  width: 100%;
-  height: 1000px;
-}
-
-@media (max-width: 1024px) {
-  .flex-container {
-    flex-direction: column;
-  }
-
-  #wrap-inverse{
-    flex-direction: column;
-  }
-
-  .block {
-    width: 90%;
-  }
-
-  a,
-  li,
-  ul {
-    font-size: 1em;
-  }
-
-  p {
-    font-size: 1.1em;
-  }
-   .row {
-    flex-wrap: wrap-reverse;
-  }
-
-}
-
 @media (max-width: 320px) {
 
   .banner h1 {
